# ToolBoxV2

./: .coder_memory.json  .env-template  .env-teplate  .gitattributes  .gitignore  404.html  Dockerfile  Dockerfile.base  Dockerfile.ssh  Dockerfile.toolbox  DockerfileLive  LICENSE  MANIFEST.in  PROJEKT_SIMPLECORE.md  README.MD  README.md  _Dockerfile.toolbox  __gui__.py  __main__.py  add_websocket_handler.py  auto_uploade_pypi_twine.bat  build_package.py  compose.yaml  conftest.py  dependency-groups.dev  dev_local_start.bat  env-template  faq.md  helper.py  index.html  index.js  index.md  init.config  install_python_env.sh  installer.ps1  installer.sh  mkdocs.md  mkdocs.yml  modify_rust.py  nginx.conf  (+21 more)
tb-registry/: .env.example  Dockerfile  README.md  admin_cli.py  docker-compose.yml  pyproject.toml  setup_registry.sh
tb-registry/deploy/: minio.service  setup.sh  tb-registry.service  uninstall.sh
tb-registry/docs/: API_REFERENCE.md  CONTRIBUTORS_GUIDE.md  DEVELOPERS_GUIDE.md  README.md  USER_GUIDE.md
tb-registry/nginx/: registry.conf
tb-registry/registry/: __init__.py  __main__.py  app.py  config.py  exceptions.py
tb-registry/registry/api/: __init__.py  deps.py  router.py
tb-registry/registry/api/routes/: artifacts.py  auth.py  diff.py  health.py  packages.py  publishers.py  resolve.py  search.py  versions.py
tb-registry/registry/auth/: __init__.py  cloudm_client.py
tb-registry/registry/db/: __init__.py  database.py
tb-registry/registry/db/repositories/: __init__.py  artifact_repo.py  package_repo.py  user_repo.py
tb-registry/registry/diff/: __init__.py  generator.py
tb-registry/registry/models/: __init__.py  artifact.py  package.py  user.py
tb-registry/registry/resolver/: __init__.py  dependency.py  semver.py
tb-registry/registry/services/: __init__.py  artifact_service.py  package_service.py  sync_service.py  verification.py
tb-registry/registry/storage/: __init__.py  base.py  manager.py  minio_mirror.py  minio_primary.py
tb-registry/registry/web/static/css/: registry.css
tb-registry/registry/web/templates/: docs.html  index.html  package.html
tb-registry/tests/: __init__.py  conftest.py  test_auth.py  test_e2e.py  test_health.py  test_packages.py  test_semver.py  test_storage.py
tb-registry/tests/integration/: test_auth_migration.py
tb-registry/tests/test_api/: test_deps.py
toolboxv2/mods/isaa/: AgentFramwork.py  AgentUtils.py  Agents.py  README.md  __init__.py  auto_docs.py  chainUi.py  ddg_litellm_free_provider.py  isaa.py  isaa_modi.py  memory_index.py  model_tool_test.py  module.py  pyproject.toml  requerments.txt  requirements.txt  tbConfig.yaml  tests.py  types.py  ui.py
toolboxv2/mods/isaa/CodingAgent/: AtomicCoder.py  IncrementalPipeline.py  auto_runner.py  coder.py  coder_toolset.py  live.py  manager.py  parser.py  project_developer.py  readme_project_developer.md  runner.py  rust.py  test_coder.py  web.py
toolboxv2/mods/isaa/CodingAgent/project_dev_ui/: Readme.md  agent_connector.py  app.py  connector.py  db.py  parallel_connector.py  preview_server.py  project_dev.db  requirements  run.py  test_db.py
toolboxv2/mods/isaa/SearchAgentCluster/: entry.py  search_tool.py
toolboxv2/mods/isaa/base/: AgentKnowledgeActor.py  AgentUtils.py  Agents.py  KnowledgeBase.py  MemoryKnowledgeActor.py  ai_semantic_memory.py  hybrid_memory.py  local_embeddings.py  memory_graph_visualizer.py  memory_manager_ui.py
toolboxv2/mods/isaa/edpoints/: configF.py
toolboxv2/mods/isaa/extras/: adapter.py  agent_ui.py  cahin_printer.py  destop_auto.py  dream_graph.py  filter.py  isaa_branding.py  live_obs_server.py  mcp_session_manager.py  modes.py  obs_viewer.py  ocr_engine.py  session.py  terminal_progress.py  verbose_output.py  web_search.py  zen_renderer.py
toolboxv2/mods/isaa/kernel/: __init__.py  instace.py  models.py  types.py
toolboxv2/mods/isaa/lnn/: binary_test.py  dump.py  live.py  mnist_test.py  modality_test.py  numbertest.py  rand_test.py  test.py  text_test_mini.py  tf.py  ttt.py
toolboxv2/mods/isaa/stema_project/: compare.py  inference.py  main.py  pretraining.py  requirements.txt
toolboxv2/mods/isaa/subtools/: audo_to_text_assemblyai.py  file_loder.py  open_weather_map.py  web_loder.py  youtube_audio.py
toolboxv2/mods/isaa/ui/: README.md  __init__.py  app.py  chat_store.py  nice.py  stream_bridge.py
toolboxv2/r_blob_db/: Cargo.toml  README.md  pyproject.toml
toolboxv2/r_blob_db/src/: main.rs
toolboxv2/simple-core/src-tauri/: 2  Cargo.toml  build.rs  hud.html  setup.html  starting.html  tauri.conf.json
toolboxv2/simple-core/src-tauri/capabilities/: default.json  desktop.json
toolboxv2/simple-core/src-tauri/icons/: icon.icns
toolboxv2/simple-core/src-tauri/permissions/: commands.toml  default.toml  home-read-extends.toml  read-files.toml
toolboxv2/simple-core/src-tauri/src/: hud_settings.rs  lib.rs  main.rs  mode_manager.rs  worker_manager.rs
toolboxv2/src-core/: Cargo.toml  app_singleton.py  app_singleton.pyi  config_template.toml
toolboxv2/src-core/src/: app_singleton.rs  lib.rs  main.rs  nuitka_builder.rs  nuitka_client.rs  nuitka_loader.rs  python_ffi.rs  ws_bridge.rs
toolboxv2/tb-exc/: Cargo.toml  DEPS.md  GUIDES_README.md  TB_LANG_DEVELOPMENT_GUIDE.md  TB_LANG_PROGRAMMING_GUIDE.md
toolboxv2/tb-exc/_src/: lib.rs  main.rs
toolboxv2/tb-exc/examples/: arithmetic.tb  config_example.tb  functions.tb  hello.tb  pipeline.tb
toolboxv2/tb-exc/plugins/: bash_utils.yaml  python_utils.yaml
toolboxv2/tb-exc/src/: .gitignore  BUILD_CLI_GUIDE.md  Cargo.toml  DEVELOPMENT_TIMELINE.md  LLMInfo.md  Lang.md  MOBILE_BUILD.md  README.md  TB_LANGUAGE_REFERENCE.md  build-mobile.ps1  build-mobile.sh  dependency_compiler.rs  fix_errors.py  fix_type_errors.py  fixes.md  info.md  lib.rs  main.rs  target.rs
toolboxv2/tb-exc/src/.cargo/: config.toml  config.toml.example
toolboxv2/tb-exc/src/examples/: test_js_array_ops.tb  test_phase3.tb  test_plugin_full.tb  test_plugin_parser.tb
toolboxv2/tb-exc/src_/: dependency_compiler.rs  lib.rs
toolboxv2/tcm/: Cargo.toml  config.toml
toolboxv2/tcm/src/: main.rs
(+2097 files in other folders)
