[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolboxv2"
version = "0.1.22"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "cachetools>=5.5.2",
    "cryptography>=45.0.7",
    "fastapi>=0.115.9",
    "ipython>=9.5.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "packaging>=24.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "qrcode>=8.0",
    "radon>=6.0.1",
    "redis>=6.4.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "watchfiles>=1.0.4",
    "webauthn>=2.5.1",
    "schedule>=1.2.2",
    "websockets>=15.0.1",
    "customtkinter>=5.2.2",
    "streamlit>=1.49.1",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "langdetect>=1.0.9",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.179.0",
    "realtimetts>=0.5.7",
    "pyperclip>=1.9.0",
    "pynput>=1.8.1",
    "readchar>=4.2.1",
    "nicegui>=2.23.3",
    "stripe>=12.5.0",
    "dateparser>=1.2.2",
    "bottle>=0.13.4",
    "pipreqs>=0.4.13",
    "xmltodict>=0.14.2",
    "traitlets>=5.14.3",
    "prompt-toolkit>=3.0.52",
    "gitpython>=3.1.45",
    "rich>=14.1.0",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "starlette>=0.47.3",
    "urllib3>=2.5.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "dill>=0.3.8",
    "icalendar>=6.3.1",
]

[project.scripts]
tb = "toolboxv2.__main__:main_runner"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.5",
    "webauthn",
    "mailjet_rest",
    "redis",
    "watchfiles",
    "SQLAlchemy",
    "Faker",
    "playwright",
    "radon",
    "setuptools",
    "mkdocs-material>=9.6.13",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocstrings-python-legacy>=0.2.6",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-jupyter>=0.25.1",
    "ipykernel>=6.29.5",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "safety>=3.2.4",
    "deptry>=0.23.1",
]

[tool.uv.workspace]
members = ["toolboxv2/mods/isaa"]

[project.optional-dependencies]
# Definiert für die Extra-Gruppe "isaa" die Quelldatei
isaa = [
    "beautifulsoup4>=4.12.0",
    "langchain-core>=0.1.20",
    "litellm~=1.74.14",
    "networkx>=3.1",
    "numpy>=2.2.6",
    "pydantic>=2.5.0",
    "groq>=0.31.0",
    "requests>=2.31.0",
    "restrictedpython>=8.0",
    "tiktoken>=0.5.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.66.0",
    "pypdf2>=3.0.1",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "rapidfuzz>=3.0.0",
    "nest-asyncio>=1.5.0",
    "schedule>=1.2.0",
    "pyvis>=0.3.0",
    "redis>=5.0.0",
    "python-a2a[all]>=0.5.1",
    "mcp>=1.6.0",
    "google-cloud-aiplatform>=1.38.0",
    "pyyaml>=6.0",
    "docker>=7.0.0",
    "httpx>=0.28.0",
    "fastapi>=0.116.1",
    "numba>=0.61.2",
    "taichi>=1.7.4",
    "hnswlib>=0.8.0",
    "inquirer>=3.4.1",
    "gpt4all>=2.8.2",
    "tenacity>=9.1.2",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "jinja2>=3.1.6",
    "icalendar>=6.3.1",
    "playwright>=1.55.0",
    "markdown2>=2.5.3",
    "pocketflow>=0.0.3",
    "beautifulsoup4>=4.13.3",
    "html2text>=2025.4.15",
    "chardet>=5.2.0",
    "mcp>=1.13.1",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.29",
]

[tool.uv.sources]
isaa = { workspace = true }

[tool.deptry]
exclude = ["toolboxv2/.data/*", "venv", "python_en", ".data/*", ".data"]
known_first_party = ["toolboxv2"]

[tool.ruff]
line-length = 90
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "python_env",
]

# Konfiguration für den Linter
[tool.ruff.lint]
# Wählen Sie einen Basissatz an Regeln und fügen Sie die 'S' Regeln für Sicherheit hinzu.
# E = pycodestyle errors
# W = pycodestyle warnings
# F = Pyflakes
# I = isort (Import-Sortierung)
# S = flake8-bandit (Sicherheitsregeln)
# UP = pyupgrade (Syntax-Modernisierung)
# B = flake8-bugbear (mögliche Bugs oder Designprobleme)
# Weitere nützliche Sets: A (flake8-builtins), C4 (flake8-comprehensions), SIM (flake8-simplify)
select = [
    # "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit (Sicherheit)
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    # "A",  # flake8-builtins (Achtung, kann sehr detailreich sein)
    # "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = ["E501", "S101", "S603","S607", "S104", "E701", "E702"]

# Optional: Regeln, die automatisch korrigiert werden können (wenn --fix verwendet wird)
# Ruff hat gute Standardwerte, aber Sie können es hier anpassen.
# fixable = ["ALL"] # Vorsicht bei "ALL", besonders bei 'S' Regeln
# unfixable = []

# Optional: Spezifische Konfigurationen für flake8-bandit
# [tool.ruff.lint.flake8-bandit]
# requests-timeout = 10 # Für S113 (requests without timeout), Standard ist 5
