[project]
name = "toolboxv2"
version = "0.1.25"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [

    "requests>=2.31.0", # rewrite all to aiohttp
    "httpx>=0.28.1", # rewrite all to aiohttp
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
    "cryptography>=45.0.7",
    "packaging>=24.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "pyzmq>=27.1.0",
    "aiosqlite>=0.22.1",
    "psutil",
    "prompt-toolkit>=3.0.52",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
toolboxv2 = [
    # ── Features ──
    "features_packed/*.zip",
    "features_packed/*.md",
    "features/core/**/*",
    "features/mini/**/*",

    # ── Web assets ──
    "dist/**/*",

    # ── Utils extras (einzelne Files für mini) ──
    "utils/extras/Style.py",
    "utils/extras/blobs.py",
    "utils/extras/__init__.py",
    "utils/extras/db/**/*",
    "utils/extras/notification.py",
    "utils/extras/registry_client.py",
    "utils/extras/event_manager.py",

    # ── CLI einzelne Files ──
    "utils/clis/first_run.py",
    "utils/clis/config_wizard.py",

    # ── Daemon einzelne Files (exotic) ──
    "utils/daemon/daemon_base.py",  # Beispiel

    # ── Config/Manifest ──
    "*.yaml",
    "*.toml",

    # ── Welcome (mini) ──
    "mods/welcome.py",

    # ── Tests ──
    "tests/**/*.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toolboxv2*"]
exclude = [
    # ── Exclude specific mods ──
    "toolboxv2.mods.ContainerManager*",
    "toolboxv2.mods.Minu*",
    "toolboxv2.mods.icli_web*",
    "toolboxv2.mods.[!CDW]*",  # Nur CloudM, DB, welcome.py behalten

    # ── Exclude utils subsets ──
    "toolboxv2.utils.tbx*",
    "toolboxv2.utils.daemon*",
    "toolboxv2.utils.proxy*",

    # ── Exclude external projects ──
    "toolboxv2.simple-core*",
    "toolboxv2.tb_browser*",
    "toolboxv2.tbjs*",
    "toolboxv2.tcm*",
    "toolboxv2.web*",  # Nur dist/ behalten via package_data

    # ── Standard excludes ──
    "tests*",
    "htmlcov*",
    "build*",
    "dist*",
    "*.egg-info*",
    ".pytest_cache",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    ".git*",
    "node_modules*",

    # ── Data/Cache ──
    "*.db",
    "*.db-*",
    "*.bak",
    "*.html",  # Alle comparison/report HTMLs
    "*.json",  # Außer die in package_data
    "*.patch",
    "*.tar.gz",
]

[project.scripts]
tb = "toolboxv2.__main__:main_runner"

[project.optional-dependencies]
# Feature-based optional dependencies
# Use: pip install toolboxv2[cli] or pip install toolboxv2[all]

core = [
    "radon>=6.0.1",
    "qrcode>=8.0",
    "watchfiles>=1.0.4",
    "gitpython>=3.1.45",
    "redis>=6.4.0",
    "xmltodict>=0.14.2",
    "minio>=7.2.20",
    "prompt-toolkit>=3.0.52",

    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "docker>=7.0.0",
]

cli = [
    "prompt-toolkit>=3.0.52",
    "ipython>=8.5.0",
    "rich>=14.1.0",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.179.0",
    "pyperclip>=1.9.0",
    "dateparser>=1.2.2",
]

web = [
    "websockets>=15.0.1",
    "webauthn>=2.5.1",
    "waitress>=3.0.2",
]

desktop = [
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.179.0",
    "dateparser>=1.2.2",
    "pyperclip>=1.9.0",
    "webrtcvad>=2.0.10",
    "customtkinter>=5.2.2",
]


isaa = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "dill>=0.3.8",
    "groq>=0.31.0",
    "pypdf2>=3.0.1",
    "nest-asyncio>=1.5.0",
    "pyvis>=0.3.0",
    "mcp>=1.6.0",
    "tenacity>=9.1.2",
    "playwright",
    "html2text>=2025.4.15",
    "chardet>=5.2.0",
    "faiss-cpu>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.1",
    "fitz>=0.0.1.dev2",
]

exotic = [
    "langchain-community>=0.3.29",
    "spacy>=3.8.11",
    "matplotlib>=3.10.0",
    "hnswlib>=0.8.0",
    "python-a2a>=0.5.1",
    #"transformers>=4.35.0",
    #"scikit-learn>=1.3.0",
    #"sentence-transformers>=2.2.0",
]

# Combined feature groups
all = [
    "toolboxv2[cli]",
    "toolboxv2[web]",
    "toolboxv2[desktop]",
    "toolboxv2[exotic]",
    "toolboxv2[isaa]",
    "toolboxv2[core]",
]

production = [
    "toolboxv2[core]",
    "toolboxv2[cli]",
    "toolboxv2[web]",
]

dev = [
    "toolboxv2[all]",
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "pytest",
    "build",
    "pytest-asyncio",
]


[tool.uv.sources]
isaa = { workspace = true }

[tool.uv.workspace]
members = [
    "llm-gateway",
]


[tool.deptry]
exclude = ["toolboxv2/.data/*", "venv", "python_en", ".data/*", ".data"]
known_first_party = ["toolboxv2", "whatsapp", "hmr", "restrictedpython"]

[tool.ruff]
line-length = 90
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "python_env",
]

# Konfiguration für den Linter
[tool.ruff.lint]
# Wählen Sie einen Basissatz an Regeln und fügen Sie die 'S' Regeln für Sicherheit hinzu.
# E = pycodestyle errors
# W = pycodestyle warnings
# F = Pyflakes
# I = isort (Import-Sortierung)
# S = flake8-bandit (Sicherheitsregeln)
# UP = pyupgrade (Syntax-Modernisierung)
# B = flake8-bugbear (mögliche Bugs oder Designprobleme)
# Weitere nützliche Sets: A (flake8-builtins), C4 (flake8-comprehensions), SIM (flake8-simplify)
select = [
    # "W",  # pycodestyle warnings - You had this enabled, uncomment if needed
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit (Security)
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM",# flake8-simplify
]

ignore = [
    "E501",  # Line too long (often handled by a formatter like Black)
    "S101",  # Use of `assert`
    "S603",  # `subprocess` call with `shell=True`
    "S607",  # Starting a process with a partial path
    "S104",  # Possible binding to all network interfaces
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "UP006", # Use `list` instead of `List` for type annotation
    "S110",  # `try-except-pass` is sometimes acceptable for cleanup
    "S605",  # Safe shell commands like 'cls' and 'clear' are okay
    "S311",  # random is not used for cryptographic purposes
    "S301",  # pickle is used with trusted data
    "S102",  # Use of exec is intentional for module loading
    "S324",  # md5 is not used for security
    "S103",  # chmod 0o755 is intentional for executables
    "SIM115",

    "F401", # Unuised imports nad vars rea dd alter
    "F841",

    "B008",  # Function calls in default arguments (can be ignored if carefully managed)
    "S108",  # Insecure temp file usage (acceptable for some scripts)
    "S112",  # `try-except-continue` is similar to S110
    "S307",  # Use of `eval` can be ignored if input is trusted

]
# Optional: Regeln, die automatisch korrigiert werden können (wenn --fix verwendet wird)
# Ruff hat gute Standardwerte, aber Sie können es hier anpassen.
# fixable = ["ALL"] # Vorsicht bei "ALL", besonders bei 'S' Regeln
# unfixable = []

# Optional: Spezifische Konfigurationen für flake8-bandit
# [tool.ruff.lint.flake8-bandit]
# requests-timeout = 10 # Für S113 (requests without timeout), Standard ist 5

[tool.pytest.ini_options]
asyncio_mode = "auto"
# addopts = "--cov=toolboxv2 --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "pytest",
    "build",
    "pytest-asyncio",
]
# Coverage configuration
[tool.coverage.run]
source = ["toolboxv2"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 0

