[package]
name = "r_blob_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core & Utilities ---
anyhow = "1.0"
once_cell = "1.21"
thiserror = "2.0"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Asynchronous Runtime & Web Server ---
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }

# --- Data Redundancy ---
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }

# --- Cryptography ---
# --- Logging ---
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
tokio-util = { version = "0.7.15", features = ["io"] }