[package]
name = "simple-core-server"
version = "0.1.0"
authors = ["Markin"]
edition = "2021"
description = "High-performance Rust server for serving static files with Toolboxv2 API integration"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
futures = "0.3.29"
config = { version = "0.13.3", features = ["toml"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.0"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.8.5"
thiserror = "2.0.11"
tracing = "0.1.41"
lazy_static = "1.5.0"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true