[package]
name = "simple-core-server"
version = "0.1.0"
authors = ["Markin"]
edition = "2021"
description = "High-performance Rust server for serving static files with Toolboxv2 API integration"

[dependencies]
listenfd = "1.0.2"
actix-web =  { version = "4.10.2", features = ["macros"] }
actix-rt = "2"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
futures = "0.3.29"
config = { version = "0.15.11", features = ["toml"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger =  "0.11.8"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.9.0"
thiserror = "2.0.11"
tracing = "0.1.41"
lazy_static = "1.5.0"
base64 = "0.22.1"
serde_yaml = "0.9.34"
tokio-stream = "0.1.17"
bytes = "1.10.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
serde_urlencoded = "0.7.1"
actix-web-actors = "4.3.0"
awc = "3.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
actix-web =  { version = "4.10.2", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-rt = "2"

