[package]
name = "tb-exc"
version = "0.1.0"
edition = "2021"
authors = ["TB Team"]
description = "TB - A unified multi-language programming environment"
license = "MIT"

[lib]
name = "tb_lang"
path = "src/lib.rs"

[[bin]]
name = "tbx"
path = "src/main.rs"

[dependencies]
num_cpus = "1.17.0"
rayon = "1.11.0"
lazy_static = "1.5.0"
bumpalo = { version = "3.19.0", features = ["collections"] }
pyo3 = "0.26.0"
serde_json = "1.0.145"
# No external dependencies for minimal core!
# Everything is implemented in pure Rust std

[dev-dependencies]


[features]
default = []
streaming = []
jit-cache = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
