[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isaa"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette",
    "litellm",
    # "gpt4all",
    "pebble",
    "transformers",
    # "inquirer",
    "networkx",
    "numpy",
    "tiktoken",
    "chromadb",
    "openai",
    "pyaudio",
    "whisper",
    "gtts",
    #"playsound",
    "pydub",
    "websockets",
    "keyboard",
    "pyperclip",
    "pygments",
    "beautifulsoup4",
    "duckduckgo_search",
    "langchain",
    "langchain_community",
    "langchain_core",
    "Pebble",
    "Requests",
    "torch",
    "tqdm",
    "utils",
    "tokenizers",
    "sentence-transformers",
    "browser-use>=0.1.40",
    "python-git>=2018.2.1",
    "langchain-experimental>=0.3.4",
    "rapidfuzz>=3.12.2",
    "astor>=0.8.1",
    "taichi>=1.7.3",
    "nest-asyncio>=1.6.0",
    "schedule>=1.2.2",
    "python-levenshtein>=0.27.1",
    "langchain-google-genai>=2.1.2",
    "qdrant-client[fastembed]>=1.13.3",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "google-adk>=0.3.0",
    "python-a2a[all]>=0.5.1",
    "mcp>=1.6.0",
    "graphiti-core[anthropic,google-genai,groq]>=0.10.5",
    "google-cloud-aiplatform>=1.90.0",
    "pyyaml>=6.0.2",
    "restrictedpython>=8.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.12",
]
