[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isaa"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "browser-use>=0.1.40",
    "chromadb>=0.6.3",
    "duckduckgo-search>=7.5.5",
    "gtts>=2.5.4",
    "keyboard>=0.13.5",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "litellm>=1.65.0",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pebble>=5.1.1",
    "pydub>=0.25.1",
    "pygments>=2.19.1",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "utils>=1.0.2",
    "websockets>=15.0.1",
    "whisper>=1.1.10",
    "graphiti-core[anthropic,google-genai,groq]>=0.10.5",
    "sentence-transformers",
    "browser-use>=0.1.40",
    "python-git>=2018.2.1",
    "rapidfuzz>=3.12.2",
    "astor>=0.8.1",
    "taichi>=1.7.3",
    "nest-asyncio>=1.6.0",
    "schedule>=1.2.2",
    "python-levenshtein>=0.27.1",
    "langchain-google-genai>=2.1.2",
    "qdrant-client[fastembed]>=1.13.3",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.1",
    "redis",
    "seaborn>=0.13.2",
    "google-adk>=0.3.0",
    "python-a2a[all]>=0.5.1",
    "mcp>=1.6.0",
    "google-cloud-aiplatform>=1.90.0",
    "pyyaml>=6.0.2",
    "restrictedpython>=8.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.12",
    "scikit-learn>=1.6.1",
    "transformers>=4.49.0",
    "fuzzywuzzy>=0.18.0",
]

[tool.setuptools.packages.find]
include = ["base*", "extras*", "subtools*"]
exclude = ["lnn*", "ui*", "CodingAgent*", "SearchAgentCluster*"]
