[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "isaa"
version = "0.2.0"  # Updated version
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "browser-use>=0.1.40",
    "chromadb>=0.4.0",
    # "duckduckgo-search>=5.0.0", # Often included with browser-use or other search tools
    "gtts>=2.3.0",
    # "keyboard>=0.13.5", # Problematic for server-side, review if essential
    "langchain>=0.1.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.1.20",
    "litellm~=1.74.14",
    "networkx>=3.1",
    "numpy>=1.26.0",
    "openai>=1.3.0",
    "pebble>=5.0.0",
    "pydantic>=2.5.0",
    "pydub>=0.25.0",
    # "pygments>=2.17.0", # Often a transitive dependency
    # "pyperclip>=1.8.0", # Clipboard ops, usually for client-side
    "requests>=2.31.0",
    # "starlette>=0.35.0", # Likely from fastapi or python-a2a
    "tiktoken>=0.5.0",
    # "tokenizers>=0.15.0", # Usually from transformers
    "torch>=2.1.0", # Ensure version matches system CUDA if used
    "tqdm>=4.66.0",
    "transformers>=4.35.0", # Keep the higher version if duplicates existed
    # "utils>=1.0.1", # Generic, ensure it's the right one
    "websockets>=12.0",
    # "whisper>=1.1.10", # OpenAI Whisper, if used directly
    "scikit-learn>=1.3.0",
    # "fuzzywuzzy>=0.18.0", # Replaced by rapidfuzz generally
    # "graphiti-core[anthropic,google-genai,groq]>=0.10.5", # Specific tool, ensure used
    "sentence-transformers>=2.2.0",
    # "python-git>=3.1.0", # GitPython, if used directly
    "rapidfuzz>=3.0.0",
    "astor>=0.8.0",
    # "taichi>=1.7.0", # Specific computation library, ensure used
    "nest-asyncio>=1.5.0",
    "schedule>=1.2.0",
    "python-levenshtein>=0.20.0", # Alternative to rapidfuzz
    "langchain-google-genai>=0.0.5",
    "qdrant-client[fastembed]>=1.7.0",
    "pyvis>=0.3.0",
    "matplotlib>=3.8.0",
    "redis>=5.0.0",
    "seaborn>=0.13.0",
    # Dependencies from EnhancedAgent and Builder
    "python-a2a[all]>=0.5.1",
    "mcp>=1.6.0",
    "google-cloud-aiplatform>=1.38.0", # Check for latest compatible version
    "pyyaml>=6.0",
    "restrictedpython>=7.0", # If used
    "docker>=7.0.0", # If used
    "uvicorn>=0.25.0", # For serving (FastAPI, A2A)
    "httpx>=0.25.0", # HTTP client
    "fastapi>=0.108.0", # For A2A/MCP servers if built with FastAPI
    # Optional OpenTelemetry (uncomment if used)
    # "opentelemetry-api>=1.22.0",
    # "opentelemetry-sdk>=1.22.0",
    # "opentelemetry-exporter-otlp>=1.22.0",
    "einops>=0.8.1",
    "datasets>=3.6.0",
]

[tool.setuptools.packages.find]
include = ["base*", "CodingAgent*", "extras*", "SearchAgentCluster*"]
exclude = []
