[package]
name = "simple-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["Markin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(any(target_os = "android")))'.dependencies]
tauri-plugin-autostart = "2"

# If you have platform-specific dependencies, they might look like this:
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
# Add desktop-specific dependencies here, if any

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
