[workspace]
members = [
    "crates/tb-core",
    "crates/tb-parser",
    "crates/tb-types",
    "crates/tb-optimizer",
    "crates/tb-codegen",
    "crates/tb-jit",
    "crates/tb-cache",
    "crates/tb-plugin",
    "crates/tb-cli",
    "crates/tb-runtime",
    "crates/tb-builtins",
    "builtin-plugins/server",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TB Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
dashmap = "5.5"
im = { version = "15.1", features = ["serde"] }
parking_lot = "0.12"
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Hashing & Crypto
sha2 = "0.10"
blake3 = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
colored = "2.1"

# FFI & Plugins
libloading = "0.8"
dlopen = "0.1"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
criterion = "0.5"
proptest = "1.4"

# Mobile platform support
jni = "0.21"  # For Android JNI bindings
ndk = "0.8"   # Android NDK support
ndk-context = "0.1"  # Android context management

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
