[package]
name = "tb-server-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-rt = "2.9"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

