[package]
name = "tb-builtins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
tb-core = { path = "../tb-core" }
tb-cache = { path = "../tb-cache" }
tb-plugin = { path = "../tb-plugin" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Networking
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File I/O
tokio-util = { version = "0.7", features = ["io"] }

# Blob storage (distributed)
sha2 = "0.10"
md5 = "0.7"
bincode = "1.3"
im = "15.1"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }

# Encryption (for blob files)
# aes-gcm = "0.10"  # Disabled due to edition2024 requirement
# argon2 = "0.5"    # Disabled due to edition2024 requirement
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dashmap = "6.1"
once_cell = "1.19"
parking_lot = "0.12"
bytes = "1.7"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

