[package]
name = "tb-jit"
version.workspace = true
edition.workspace = true

[dependencies]
tb-core = { path = "../tb-core" }
tb-plugin = { path = "../tb-plugin" }
im.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tb-parser = { path = "../tb-parser" }
tb-types = { path = "../tb-types" }

