[package]
name = "tb-jit"
version.workspace = true
edition.workspace = true

[dependencies]
tb-core = { path = "../tb-core" }
tb-plugin = { path = "../tb-plugin" }
im.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tb-builtins = { path = "../tb-builtins" }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tb-parser = { path = "../tb-parser" }
tb-types = { path = "../tb-types" }

