[package]
name = "tb-runtime"
version.workspace = true
edition.workspace = true

[lib]
# Support for mobile platforms (Android/iOS)
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tb-core = { path = "../tb-core" }
tb-plugin = { path = "../tb-plugin" }
thiserror.workspace = true
im.workspace = true
libloading.workspace = true
dashmap.workspace = true
once_cell = "1.19"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk.workspace = true
ndk-context.workspace = true

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific crates can be added here if needed

[features]
default = []
python = ["tb-plugin/python"]
javascript = ["tb-plugin/javascript"]
mobile = []  # Feature flag for mobile-specific functionality

